--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # https://github.com/github/gitignore/blob/main/Terraform.gitignore
 
-# Local .terraform directories
+# local .terraform directories
 .terrafom*
 **/.terraform/*
 
@@ -8,10 +8,10 @@
 *.tfstate
 *.tfstate.*
 
-# Ignore transient lock info files created by terraform apply
-.terraform.tfstate.lock.info
+# gnore transient lock info files created by terraform apply
+.terraform.lock.hcl
 
-# Crash log files
+# crash log files
 crash.log
 crash.*.log
 
